syntax = "proto3";

option csharp_namespace = "CloudBoardCommonAPI";

service HealthCheck {
  rpc Check (HealthCheckRequest) returns (HealthCheckResponse) {}
}

message HealthCheckRequest {}

message HealthCheckResponse {
  string status = 1;
}
