using CloudBoardAttestationAPI; // Assuming this exists
using CloudBoardCommon;
using Microsoft.Extensions.Configuration;
using Microsoft.Extensions.Hosting;
using Serilog; // For structured logging

// ... other necessary using statements ...

public class CloudBoardDaemon : IHostedService, IDisposable
{
    private readonly IHealthCheck _healthCheck;
    private readonly IHeartbeatPublisher _heartbeatPublisher; // Assuming this interface exists
    private readonly IJobHelperClient _jobHelperClient; // Assuming this interface exists
    private readonly IAttestationClient _attestationClient; // Assuming this interface exists
    private readonly IJobAuthClient _jobAuthClient; // Assuming this interface exists
    private readonly IWorkloadController _workloadController; // Assuming this interface exists
    private readonly IHotPropertiesController _hotPropertiesController; // Assuming this interface exists
    private readonly IIdentityManager _identityManager; // Assuming this interface exists
    private readonly CloudBoardConfiguration _config; // Your configuration class
    private readonly ILogger _logger;
    private readonly IGrpcServer _grpcServer;
    private readonly CancellationTokenSource _cts = new CancellationTokenSource();
    private readonly NIOTSEventLoopGroup _group; // Simulates NIOTSEventLoopGroup

    public CloudBoardDaemon(
        IHealthCheck healthCheck,
        IHeartbeatPublisher heartbeatPublisher,
        IJobHelperClient jobHelperClient,
        IAttestationClient attestationClient,
        IJobAuthClient jobAuthClient,
        IWorkloadController workloadController,
        IHotPropertiesController hotPropertiesController,
        IIdentityManager identityManager,
        IConfiguration configuration,
        ILogger logger,
        IGrpcServer grpcServer,
        NIOTSEventLoopGroup group
    )
    {
        _healthCheck = healthCheck;
        _heartbeatPublisher = heartbeatPublisher;
        _jobHelperClient = jobHelperClient;
        _attestationClient = attestationClient;
        _jobAuthClient = jobAuthClient;
        _workloadController = workloadController;
        _hotPropertiesController = hotPropertiesController;
        _identityManager = identityManager;
        _config = configuration.GetSection("CloudBoard").Get<CloudBoardConfiguration>(); //Load your config
        _logger = logger;
        _grpcServer = grpcServer;
        _group = group;
    }

    public async Task StartAsync(CancellationToken cancellationToken)
    {
       

        // 2. Load Configuration (_config)

        // 3. Initialize components (using DI)
        await _identityManager.InitializeAsync(cancellationToken); // Load TLS certificates

        //4. Start other components (concurrently)
        var tasks = new List<Task>();
        tasks.Add(_heartbeatPublisher.StartAsync(cancellationToken));
        tasks.Add(_hotPropertiesController.StartAsync(cancellationToken));
        tasks.Add(_workloadController.StartAsync(cancellationToken));
        tasks.Add(_grpcServer.StartAsync(cancellationToken)); // Start gRPC server
        //add other tasks as required


        // 5. Handle hot properties updates
        _hotPropertiesController.HotPropertyUpdated += async (sender, e) =>
        {
            //Apply changes based on the new configuration
            _logger.Information("Hot properties updated: {0}", e.NewProperties);
        };

        //6. Implement the job handling logic (gRPC)

        //7. Implement error handling and logging


        await Task.WhenAll(tasks);
    }

    public async Task StopAsync(CancellationToken cancellationToken)
    {
        _logger.Information("CloudBoardDaemon stopping...");
        _cts.Cancel();

        // Stop all components gracefully. This needs proper implementation, especially regarding asynchronous operations and cancellation tokens.
        await _heartbeatPublisher.StopAsync(cancellationToken);
        await _hotPropertiesController.StopAsync(cancellationToken);
        await _workloadController.StopAsync(cancellationToken);
        await _grpcServer.StopAsync(cancellationToken);

        _group.ShutdownGracefully(); // Simulate NIOTSEventLoopGroup shutdown
        _logger.Information("CloudBoardDaemon stopped.");
    }

    public void Dispose()
    {
        _cts.Dispose();
        _group.Dispose();
    }
}

// Placeholder interfaces. You'll need to create the actual implementations based on your chosen technologies.

public interface IHeartbeatPublisher
{
    Task StartAsync(CancellationToken cancellationToken);
    Task StopAsync(CancellationToken cancellationToken);
}

public interface IJobHelperClient
{
    Task<JobResponse> HandleJobRequestAsync(JobRequest request, CancellationToken cancellationToken);
}

public interface IAttestationClient
{
    Task<AttestationResponse> GetAttestationAsync(CancellationToken cancellationToken);
}

public interface IJobAuthClient
{
    //Implement authentication
}


public interface IWorkloadController
{
    Task StartAsync(CancellationToken cancellationToken);
    Task StopAsync(CancellationToken cancellationToken);
}

public interface IHotPropertiesController
{
    event EventHandler<HotPropertiesUpdatedEventArgs> HotPropertyUpdated; // Define an event for configuration changes
    Task StartAsync(CancellationToken cancellationToken);
    Task StopAsync(CancellationToken cancellationToken);
}


public class HotPropertiesUpdatedEventArgs : EventArgs
{
    public Dictionary<string, string> NewProperties { get; set; }

    public HotPropertiesUpdatedEventArgs(Dictionary<string, string> newProperties)
    {
        NewProperties = newProperties;
    }
}

public interface IIdentityManager
{
    Task InitializeAsync(CancellationToken cancellationToken);
    // Add other identity management methods here
}

public class CloudBoardConfiguration
{
    // Define your configuration properties here
}

public interface IGrpcServer
{
    Task StartAsync(CancellationToken cancellationToken);
    Task StopAsync(CancellationToken cancellationToken);
}
public class NIOTSEventLoopGroup
{
    public void ShutdownGracefully()
    {
        // Shutdown the event loop group
    }
    public void Dispose()
    {
        // Dispose the event loop group
    }
}